# BalNLP

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  BalNLP_corpus.json  Data  License  MANIFEST.in  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
bal_tests/: test_cleaner.py  test_normalizer.py  test_stopword.py  test_tokenizer.py  test_utils_file.py
balnlp/: __init__.py  command.py
balnlp/bal_tokenizer/: __init__.py  bytes_pair_tokenizer.py  sentence_tokenizer.py  sentencepiece_tokenizer.py  word_tokenizer.py
balnlp/dedup/: __init__.py  exact.py  exact_dedup.py  near_dedup.py  repetition_dedup.py
balnlp/modeling/: fractal_net.py
balnlp/modeling/layers/: dynamics.py  embeddings.py
balnlp/preprocessing/: __init__.py  cleaner.py  stopwords.py  text_cleaner.py  text_normalizer.py
balnlp/utils/: utils_file.py
data/: balochi_corpus_pre.txt  data.txt  tbp_nebeshtank.txt
scripts/: __init__.py  build_corpus.py  commandhelp  inference.py  tokenize_data.py  train_model.py  train_tokenizer.py
scripts/tokenizer/: tokenizer.json
src/: __init__.py  command.py  output.json
src/bal_tokenizer/: Word_tokenizer.py  __init__.py  sentence_tokenizer.py
src/preprocessing/: __init__.py  stopwords.py  text_clearner.py  text_normalizer.py
src/resources/bal_stopwords/: balochiStopwords.txt
src/utils/: utils_file.py
test/: __init__.py  byp_test.py  manual_test.py  near_dup_test.py  test_dedup.py  test_pipline.py
test/data/: balochi_sample_output.json
tokenizer_model/: tokenizer.json  vocab.txt
(+1 files in other folders)
