[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BalNLP"
description = "A comprehensive Natural Language Processing toolkit for the Balochi language"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Shehzad Khalid", email = "shehzadkhalido4@gamil.com"},
]
version = "1.0.1"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "nltk>=3.6.0",
    "scikit-learn>=0.24.0",
    "regex>=2023.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "mypy>=0.9",
    "tox>=3.24",
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "balnlp"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
^/docs/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=balnlp --cov-report=xml"
testpaths = [
    "tests",
]
